new lingo class notes -km

--- a/comp-ling-2/class-12-feb.org
+++ b/comp-ling-2/class-12-feb.org
@@ -105,3 +105,4 @@ There are two types of not following:
 * Assignment
 
 Give examples of all of Grice's Maxims
+(With citations as to where we got the examples from)
